# candle-extensions-fork

./: Cargo.toml
candle-cublaslt/src/: lib.rs
candle-cudnn-attn/: Cargo.toml  README.md  build.rs
candle-cudnn-attn/examples/: basic_attention.rs
candle-cudnn-attn/include/: cudnn_frontend.h  cudnn_frontend_impl.cpp  cudnn_thd_frontend.h
candle-cudnn-attn/src/: attention.rs  error.rs  ffi.rs  frontend.rs  graph.rs  lib.rs  tensor.rs
candle-cudnn-attn/tests/: integration_tests.rs
candle-flash-attn-v1/src/: lib.rs
candle-layer-norm/: Cargo.toml
candle-layer-norm/src/: lib.rs
candle-rotary/src/: lib.rs
