[workspace]
members = [
    "candle-layer-norm", 
    "candle-rotary", 
    "candle-flash-attn-v1",
    "candle-cublaslt",
    "candle-cudnn-attn",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Nicolas Patry <patry.nicolas@protonmail.com>"]
keywords = ["tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/huggingface/candle-extensions/"

[workspace.dependencies]
# Runtime
candle = { version = "0.*", package = "candle-core", features = ["cuda"]}
cudarc = { version = "0.*" }
half = { version = "2.3.1", features = ["num-traits"] }
# Dev
candle-nn = { version = "0.*", features = ["cuda"] }
# Build
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = "0.1.1"
num_cpus = "1.15.0"
rayon = "1.7.0"
