[package]
name = "candle-cudnn-attn"
description = "cuDNN attention bindings for candle - flash-attention compatible API"
homepage = "https://github.com/huggingface/candle-extensions/candle-cudnn-attn/"
documentation = "https://docs.rs/candle-cudnn-attn"
readme = "README.md"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
candle = { workspace = true }
thiserror = "1.0"
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
bindgen = "0.72"
cc = "1.1"

[features]
default = []
