[package]
name = "candle-cudnn-attn"
description = "cuDNN attention bindings for candle - flash-attention compatible API"
homepage = "https://github.com/michaelfeil/candle-extensions/candle-cudnn-attn/"
authors = ["Michael Feil"]
documentation = "https://docs.rs/candle-cudnn-attn"
readme = "README.md"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
candle = { workspace = true }
thiserror = "1.0"
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
bindgen = "0.72"
cc = "1.1"

[features]
default = []
