[package]
name = "candle-layer-norm"
description = "Layer Norm layer for the candle ML framework."
homepage = "https://github.com/huggingface/candle-extensions/candle-layer-norm/"
documentation = "https://docs.rs/candle-layer-norm"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace  = true
license.workspace = true
repository.workspace = true

[dependencies]
candle = { workspace = true, package = "candle-core", features = ["cuda"] }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"
